Remove Roboto from styles.css as it has spacing issues making it unsuitable for reading programmatic code, changed cron fields to use monospace fonts

--- a/code/cronkeep/src/assets/css/styles.css
+++ b/code/cronkeep/src/assets/css/styles.css
@@ -13,11 +13,15 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+/*@import url(https://fonts.googleapis.com/css?family=Roboto);*/
 
 body {
   padding-top: 70px;
-  font-family: 'Roboto', sans-serif;
+  /*font-family: 'Roboto', sans-serif;*/
+}
+
+td[data-searchable], .modal-body .form-control {
+    font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
 }
 
 .panel-crontab {
